PR lib/54131 - declare the loop variable outside the for loop